# gimme-embeds

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
src/: commands.rs  helpers.rs  main.rs
