[package]
name = "gimme-embeds"
version = "0.2.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
